# f1-22-telemetry

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml  setup.py  test_requirements.txt
f1_22_telemetry/: appendices.py  listener.py  main.py  packets.py
f1_22_telemetry/logic/: car.py  participants.py  session.py
f1_22_telemetry/models/: car.py  laps.py  participants.py  session.py
tests/: conftest.py  test_listener.py  test_participants.py  test_session_packet.py  test_telemetry_data.py
tests/example_packets/: car_damage_data.json  car_setup_data.json  car_telemetry_data.json  event_data.json  lap_data.json  motion_data.json  participants_data.json  session_data.json  session_history_data.json
